<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Spinner
            android:layout_width="395dp"
            android:layout_height="24dp"
            android:id="@+id/optionSpin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:entries="@array/figure_array" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.076"/>
    <TextView
            android:text="@string/seeOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/seeOption" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/widthText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.098"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/optionSpin"
            android:hint="@string/inputWidthHint"
            android:inputType="numberDecimal"
            android:visibility="visible"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/lengthText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/widthText"
            android:hint="@string/inputLengthHint" android:inputType="numberDecimal"
            android:visibility="visible"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/heightText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            android:inputType="numberDecimal"
            android:hint="@string/inputHeightHint"
            android:visibility="visible"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/lengthText"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/radiusText" android:inputType="numberDecimal" android:hint="@string/inputRadiusHint"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            android:visibility="visible"
            android:layout_marginTop="60dp" app:layout_constraintTop_toBottomOf="@+id/heightText"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/volumeView"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.791" android:layout_marginTop="228dp"
            app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="22dp" android:id="@+id/areaView"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.854" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/volumeView"/>

</android.support.constraint.ConstraintLayout>